--- a/category.html
+++ b/category.html
@@ -74,6 +74,13 @@
                 </div>
             </li>
 
+            <!-- Nav Item - Quản lí đơn hàng-->
+            <li class="nav-item">
+                <a class="nav-link" href="order.html">
+                    <img src="img/icons8-purchase-order-18.png" width="18" height="18"/>
+                    <span>Quản lí đơn hàng</span></a>
+            </li>
+
             <!-- Nav Item - Charts -->
             <li class="nav-item">
                 <a class="nav-link" href="charts.html">
